fix: layout shift when scrollbar is present

--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -1,6 +1,8 @@
 *,
 *::before,
 *::after {
+	padding: 0;
+	margin: 0;
 	box-sizing: border-box;
 }
 
@@ -8,32 +10,28 @@ html {
 	// NOTE: Pixel perfect designs - 100vw / width of the design in pixels * 10
 	font-size: calc((100vw / 1920) * 10);
 
-	@include media("<=tablet") {
-		font-size: calc((100vw / 1024) * 10);
-	}
-
-	@include media("<=phone") {
-		font-size: calc((100vw / 320) * 10);
-	}
-
-	// @include media("<=sphone") {
-	// 	font-size: calc((100vw / 320) * 10);
-	// }
+	@media("<phone"){}
+	scroll-behavior: smooth;
 }
 
 body {
-	@extend %description-18;
-	font-family: $font-general-sans;
+	@extend %description-23;
+	font-family: "Roboto", sans-serif;
 	overscroll-behavior-y: none;
-	background-color: $color-silver;
-	color: $color-white;
-	line-height: 1.4;
+	overflow-x: hidden;
+	background-color: $color-cararra;
+	color: $color-black;
+	line-height: 1.2;
+}
+
+.page-wrapper {
+	width: 100vw;
 }
 
 img {
 	max-width: 100%;
-	// removes small gaps under images when they are wrapped in a link
 	vertical-align: middle;
+	object-fit: cover;
 }
 
 button {
